--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,6 @@
     <string name="name_store">Store</string>
     <string name="text_delete_image">"Are you sure you want to delete "</string>
     <string name="text_input_name">Please name it</string>
+    <string name="text_name_alert">Give your image a name</string>
+    <string name="name_ok">OK</string>
 </resources>
